# meal-planner

./: .gitignore  README.md  meal-planner-prd.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py  services.py
backend/app/routers/: meals.py  settings.py  week_plans.py
backend/tests/: conftest.py  test_services.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Icons.tsx  Layout.tsx  MacroBar.tsx  MealEditor.tsx  MealThumb.tsx  Modal.tsx  Toaster.tsx
frontend/src/lib/: api.ts  store.tsx  types.ts  utils.ts
frontend/src/pages/: LibraryPage.tsx  OutputsPage.tsx  PlannerPage.tsx  SettingsPage.tsx
frontend/src/test/: MacroBar.test.tsx  utils.test.ts
